[gd_scene load_steps=5 format=3 uid="uid://bc1yb7stqvc60"]

[ext_resource type="Script" path="res://scenes/projectiles/normal_projectile.gd" id="1_usyfx"]
[ext_resource type="Texture2D" uid="uid://bgmfugh5p0dqu" path="res://assets/sprites/UI books & more.png" id="1_uxuxa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hxonh"]
atlas = ExtResource("1_uxuxa")
region = Rect2(448, 352, 16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_du44y"]
size = Vector2(16, 26)

[node name="NormalProjectile" type="Area2D" groups=["projectiles"]]
collision_layer = 5
collision_mask = 2
script = ExtResource("1_usyfx")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = SubResource("AtlasTexture_hxonh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 1)
shape = SubResource("RectangleShape2D_du44y")

[node name="CollisionCast" type="RayCast2D" parent="."]
target_position = Vector2(83, 0)
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[connection signal="area_entered" from="." to="." method="_on_body_entered"]
[connection signal="area_entered" from="." to="." method="_on_area_entered"]
